--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,14 @@ main {
 	max-width: 480px;
 }
 
+.illustration-img-large {
+	display: none;
+}
+
+.box {
+	display: none;
+}
+
 .bg-pattern {
 	width: 100%;
 }
@@ -96,8 +104,8 @@ main {
 @media (max-width: 899px) {
 	main {
 		position: relative;
-		margin-top: 10rem;
-		padding-top: 13rem;
+		margin-top: 12rem;
+		padding-top: 12rem;
 	}
 
 	.img-container {
@@ -115,12 +123,15 @@ main {
 	}
 }
 
-@media (max-width: 400px) {
+@media (max-width: 475px) {
 	main {
+		margin-top: 10rem;
 		padding-top: 8rem;
 	}
+
 	.img-container {
 		max-width: 260px;
+		padding-bottom: 1.5rem;
 		top: -8rem;
 	}
 }
@@ -129,22 +140,59 @@ main {
 	main {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		max-width: 800px;
-		padding: 2rem 2rem 2rem 0;
+		max-width: 830px;
+		padding: 0;
 		gap: 2rem;
 		align-items: center;
+		position: relative;
+	}
+
+	.illustration-img {
+		display: none;
+	}
+
+	.box {
+		display: block;
+		position: absolute;
+		top: 195px;
+		left: -90px;
+		max-width: 175px;
 	}
 
 	.img-container {
+		overflow: hidden;
+		background-image: url("./../images/bg-pattern-desktop.svg");
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: bottom 0 right 40px;
+		height: 100%;
+	}
+
+	.illustration-img-large {
+		display: block;
+		max-width: 100%;
+		position: relative;
+		left: -65px;
+		top: 50%;
+		transform: translateY(-50%);
+		max-width: 400px;
 	}
 
 	.faq {
-	}
-
-	.faq-container {
+		padding: 4rem 4rem 4rem 0;
 	}
 
 	.faq-title {
 		text-align: left;
+	}
+}
+
+@media (min-width: 1050px) {
+	.box {
+		display: block;
+		position: absolute;
+		top: 180px;
+		left: -120px;
+		max-width: 175px;
 	}
 }
